# cdcpd

./: .gitignore  CMakeLists.txt  LICENCE  README.md  TODO.txt  cdcpd-config.cmake.in  cdcpd.rosinstall  compare.jl  install-deps.sh  install_home_local.sh  package.xml  procedure.txt  requirements.txt  rope_example_10_points_2020-02-20-16-58-46.bag  rope_example_11_points_2020-02-26-10-26-45.bag  setup.py  test_cdcpd.sh
PCL_features/: .gitignore  CMakeLists.txt  __init__.py  features.cpp
cdcpd/: .gitignore  CMakeLists.txt  README.md  car5_real_cdcpd.world  car5_real_cdcpd_mesh.world  cdcpd-config.cmake.in  cdcpd.py  compound_cylinder_sphere.world  cpd.py  custom_rosconsole.conf  cv_utils.py  failure_recovery.py  fake_robot.srdf  fake_robot.urdf  geometry_utils.py  gurobi_utils.py  lle.py  note_on_demo.txt  optimizer.py  package.xml  prior.py  requirements.txt  setup.py  simple_world.world  temp.world  tf_utils.py  torus.world  torus_higher_res.world
cdcpd/cmake/modules/: FindFAISS.cmake  FindGUROBI.cmake
cdcpd/include/cdcpd/: cdcpd.h  cdcpd_node.h  corner_candidate_detector.h  cpd.h  deformable_object_configuration.h  img_cloud_utils.h  img_utils.h  obs_util.h  obstacle_constraint_helper.h  optimizer.h  past_template_matcher.h  sdformat_convex_decomposer.h  sdformat_to_planning_scene.h  segmenter.h  stopwatch.h  tracking_map.h  utils.h
cdcpd/include/cdcpd_ros/: camera_sub.h  kinect_sub.h
cdcpd/include/v-hacd/: FloatMath.h  FloatMath.inl  VHACD.h
cdcpd/launch/: azure_2_cloth.launch  azure_2_rope.launch  kinect.launch  kinect_tripodB.launch  realsense.launch  static_rope.test  test_sdformat.sh  tracker.launch
cdcpd/meshes/: car5_real_mesh.stl  compound_cylinder_sphere.stl  torus.stl  torus_higher_res.stl
cdcpd/msg/: GripperConstraint.msg
cdcpd/pcl_features/: features.py
cdcpd/rviz/: azure_2.rviz  azure_demo_2.rviz  kinect.rviz  kinect_tripodB.rviz  mesh_collision_debugging.rviz  realsense.rviz
cdcpd/scripts/: cdcpd_visualize.py  gripper_tf_node.py  pickle_generate.py  run_all.sh  run_cloth_edge_cover_4.sh  run_cloth_self_occlusion_6.sh  run_rope_by_hand_4.sh  run_rope_by_hand_6.sh  run_rope_edge_cover_4.sh  run_rope_winding_cylinder_4.sh  run_sim_cloth_cover_cylinder_6.sh  run_sim_cloth_edge_cover_2.sh  run_sim_rope_edge_cover_3.sh
cdcpd/src/: bindings.cpp  cdcpd.cpp  cdcpd_node.cpp  cdcpd_offline.cpp  corner_candidate_detector.cpp  cpd.cpp  deformable_object_configuration.cpp  depth_traits.h  img_cloud_utils.cpp  img_utils.cpp  obs_util.cpp  obstacle_constraint_helper.cpp  optimizer.cpp  past_template_matcher.cpp  sdformat_convex_decomposer.cpp  sdformat_to_planning_scene.cpp  segmenter.cpp  stopwatch.cpp  test_sdformat_to_planning_scene.cpp  tracking_map.cpp  utils.cpp
cdcpd/src/cdcpd/: cdcpd_solver.py  cv_utils.py  gurobi_utils.py  lle.py  optimize_eqn.py  optimizer.py  prior.py  ros_wrappers.py  visualization.py
cdcpd/src/cdcpd_ros/: camera_sub.cpp  kinect_sub.cpp
cdcpd/src/pcl_features/: .gitignore  __init__.py  features.py
cdcpd/src/v-hacd/: FloatMath.cpp
cdcpd/srv/: SetGripperConstraints.srv
cdcpd/tests/: CMakeLists.txt  basic_input.cpp  box_nearest_points_test.cpp  main.cpp  mesh_conversion_test.cpp
cdcpd/tests/include/: BoxNearestPointsTest.h  MeshConversionTest.h  dummy_test.h
cdcpd/tests/integration/: static_rope.cpp  test_resim_utils.cpp
cdcpd/tests/integration/include/: test_resim_utils.h
cdcpd/tests/pytest/integration/: test_static_rope.py
cdcpd/tests/pytest/utils/: cdcpd_bagfiles.py
cdcpd/tests/unit/: main.cpp
cdcpd/tests/unit/include/: ClothConfigurationTest.h  DeformableObjectTrackingTest.h  RopeConfigurationTest.h  test_utils.h
cdcpd_ros/: .gitignore  CMakeLists.txt  package.xml
cdcpd_ros/config/: cdcpd_testing.rviz
cdcpd_ros/include/cdcpd_ros/: kinect_sub.h
cdcpd_ros/launch/: gazebo_floating_tracking.launch  rope_tracking.launch
cdcpd_ros/msg/: Float32MultiArrayStamped.msg
cdcpd_ros/scripts/: run_cloth_cover_cylinder.sh  run_cloth_edge_cover_3.sh  run_cloth_self_occlusion_5.sh  run_cloth_self_occlusion_8.sh  run_rope_edge_cover_2.sh  run_rope_edge_cover_3.sh  run_rope_winding_cylinder_3.sh  run_rope_winding_cylinder_5.sh
cdcpd_ros/src/: cdcpd_bagfile.cpp  cdcpd_exp_test.cpp  cdcpd_node.cpp  test_moveit_cc.cpp
cdcpd_ros/src/cdcpd_ros/: kinect_sub.cpp
config/: cdcpd.rviz  cdcpd_testing.rviz
demos/: launch_demo1.sh  launch_demo2.sh  python_bindings.ipynb  unpack_rosbags.sh
docs/: _config.yml  index.md
examples/: basic_cdcpd_example.py  cdcpd_gripper_example.py
install_scripts/: create_ws_melodic.sh  create_ws_noetic.sh  install_ceres.sh  install_cgal.sh  install_dep.sh  install_faiss.sh  install_fgt.sh  install_for_noetic_20.sh  install_gurobi.sh  install_nomad.sh  install_opencv.sh  install_pybind11_catkin.sh  install_ros_melodic.sh  install_ros_neotic.sh  install_ros_noetic.sh  install_svm.sh  install_torch.sh
launch/: tracker.launch
msg/: CartesianControlModeLimits.msg  CartesianImpedanceParameters.msg  CartesianPathExecutionParameters.msg  ControlModeParameters.msg  GraspStatus.msg  JointImpedanceParameters.msg  JointPathExecutionParameters.msg  MotionCommand.msg  MotionStatus.msg  Robotiq3FingerActuatorStatus.msg  Robotiq3FingerCommand.msg  Robotiq3FingerObjectStatus.msg  Robotiq3FingerStatus.msg
ros_nodes/: cdcpd_node.py  cloth_cdcpd_node.py  gripper_cdcpd_node.py  gripper_tf_node.py  simple_cdcpd_node.py
scripts/: cdcpd_env.sh  cdcpd_node.py  cdcpd_visualize.py  cloth_cdcpd_node.py  gripper_cdcpd_node.py  gripper_tf_node.py  pickle_generate.py  run_cloth_cover_cylinder_3.sh  run_cloth_edge_cover_4.sh  run_cloth_self_occlusion_4.sh  run_cloth_self_occlusion_7.sh  run_cloth_self_occlusion_8.sh  run_rope_by_hand_4.sh  run_rope_by_hand_5.sh  run_rope_by_hand_6.sh  run_rope_edge_cover_2.sh  run_rope_edge_cover_3.sh  run_rope_edge_cover_4.sh  run_rope_winding_cylinder_5.sh  run_sim_cloth_self_occlusion_6.sh  run_sim_rope_edge_cover_3.sh  simple_cdcpd_node.py  test.py
src/: cdcpd.cpp  cdcpd.py  cdcpd_bagfile.cpp  cdcpd_exp_test.cpp  cdcpd_node.cpp  cpd.py  cv_utils.py  geometry_utils.py  (+14 more)
(+25 files in other folders)
