<?xml version="1.0"?>
<package format="2">
  <name>cdcpd</name>
  <version>0.1.0</version>
  <description>tracking for rope and cloth</description>
  <url type="repository">https://github.com/UM-ARM-Lab/cdcpd</url>
  <maintainer email="dmcconac@umich.edu">Dale McConachie</maintainer>
  <author email="chicheng@umich.edu">Cheng Chi</author>
  <author email="dmcconac@umich.edu">Dale McConachie</author>
  <author email="anveepnaik@gmail.com">Anvee Naik</author>
  <author email="spschul@umich.edu">Steven Schulte</author>
  <author email="yixuanwa@umich.edu">Yixuan Wang</author>
  <author email="pmitrano@umich.edu">Peter Mitrano</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>pybind11_catkin</depend>
  <depend>pyrosmsg</depend>
  <depend>roscpp</depend>
  <depend>sdf_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>smmap_models</depend>
  <depend>smmap_utilities</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
</package>

