<?xml version="1.0"?>
<package format="2">
    <name>cdcpd_ros</name>
    <version>0.0.0</version>
    <description>The cdcpd_ros package</description>

    <maintainer email="dmcconac@todo.todo">dmcconac</maintainer>
    <maintainer email="pmitrano@todo.todo">pmitrano</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>arc_utilities</depend>
    <depend>cdcpd</depend>
    <depend>cv_bridge</depend>
    <depend>disgnostic_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>image_geometry</depend>
    <depend>image_transport</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>victor_hardware_interface</depend>
</package>
