add_executable(mesh_conversion_test mesh_conversion_test.cpp)
target_link_libraries(mesh_conversion_test PUBLIC cdcpd)
target_compile_definitions(mesh_conversion_test PUBLIC CGAL_USE_BASIC_VIEWER)

#add_executable(box_nearest_points_test box_nearest_points_test.cpp)
#target_link_libraries(box_nearest_points_test PUBLIC cdcpd)
#target_compile_definitions(box_nearest_points_test PUBLIC CGAL_USE_BASIC_VIEWER)

